# codex-monitor

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: agent-task-template-monitor-setup.md
examples/: gitlab-monitor.yaml  sentry-monitor.yaml  wake-message-templates.md
src/codex_monitor/: __init__.py  cli.py  config.py  logging_utils.py  render.py  runner.py  state.py  tmux_delivery.py
src/codex_monitor/monitors/: __init__.py  gitlab.py
tests/: test_cli.py  test_config.py  test_gitlab_monitor.py  test_render.py  test_runner.py  test_state.py  test_tmux_delivery.py
