[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "codex-monitor"
version = "0.1.0"
description = "Tmux wake monitors for Codex agents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
codex-monitor = "codex_monitor.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
